--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.arif.food_delivery_app">
+
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="food_delivery_app"
         android:name="${applicationName}"
