--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^0.8.4+3
   firebase_storage: ^11.2.3
   cached_network_image: ^3.2.3
+  uuid: ^3.0.4
+
 
 dev_dependencies:
   flutter_test:
