--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,21 +31,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  firebase_core: ^2.14.0
-  cloud_firestore: ^4.8.1
+  cloud_firestore: ^4.8.2
   firebase_auth: ^4.6.3
   image_picker: ^0.8.4+3
-  firebase_storage: ^11.2.3
+  firebase_storage: ^11.2.4
   cached_network_image: ^3.2.3
   uuid: ^3.0.4
   carousel_slider: ^4.0.0
-  get_storage: ^2.0.3
-
+  firebase_messaging: ^14.6.4
+  firebase_core: ^2.14.0
+  http: ^0.13.6
+  firebase_analytics: ^10.4.3
 
 
 dev_dependencies:
@@ -57,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^1.0.0
 
 
 # For information on the generic Dart part of this file, see the
